--- a/WCHProjects/Moduls/Mine/controllers/JiKeViewController.xib
+++ b/WCHProjects/Moduls/Mine/controllers/JiKeViewController.xib
@@ -1,12 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="JiKeViewController">
             <connections>
+                <outlet property="submitBtn" destination="OO1-rc-iS0" id="5a4-DF-jkE"/>
+                <outlet property="tableView" destination="5c2-KE-2ol" id="Ojc-Ij-WVL"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,7 +20,41 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="5c2-KE-2ol" customClass="BaseTableView">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <view key="tableFooterView" contentMode="scaleToFill" id="hNb-AJ-9nN">
+                        <rect key="frame" x="0.0" y="607" width="375" height="60"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OO1-rc-iS0">
+                                <rect key="frame" x="15" y="10" width="345" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="提交"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="OO1-rc-iS0" firstAttribute="top" secondItem="hNb-AJ-9nN" secondAttribute="top" constant="10" id="3fi-V1-sJV"/>
+                            <constraint firstItem="OO1-rc-iS0" firstAttribute="leading" secondItem="hNb-AJ-9nN" secondAttribute="leading" constant="15" id="Bbi-mK-2S1"/>
+                            <constraint firstAttribute="bottom" secondItem="OO1-rc-iS0" secondAttribute="bottom" constant="10" id="WjZ-0I-Vyi"/>
+                            <constraint firstAttribute="trailing" secondItem="OO1-rc-iS0" secondAttribute="trailing" constant="15" id="yFe-qn-7aQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="cV2-yJ-kjs"/>
+                        <outlet property="delegate" destination="-1" id="QO7-5W-TgD"/>
+                    </connections>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="5c2-KE-2ol" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="NeU-fB-ZzM"/>
+                <constraint firstAttribute="bottom" secondItem="5c2-KE-2ol" secondAttribute="bottom" id="V2a-DI-EDC"/>
+                <constraint firstAttribute="trailing" secondItem="5c2-KE-2ol" secondAttribute="trailing" id="tgL-u4-C7U"/>
+                <constraint firstItem="5c2-KE-2ol" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="wl1-ea-rqc"/>
+            </constraints>
         </view>
     </objects>
 </document>
