--- a/WCHProjects/Moduls/Order/view/OBuyCarTableViewCell.xib
+++ b/WCHProjects/Moduls/Order/view/OBuyCarTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -23,7 +23,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dMJ-2a-Pod">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="79.5"/>
+                                <rect key="frame" x="10" y="0.0" width="80" height="79.5"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PWP-p3-SIf">
                                 <rect key="frame" x="297" y="33.5" width="13" height="17"/>
@@ -32,19 +32,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X8c-Uv-aWP">
-                                <rect key="frame" x="90" y="10" width="14.5" height="19.5"/>
+                                <rect key="frame" x="100" y="10" width="14.5" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3My-bt-Vjn">
-                                <rect key="frame" x="90" y="35" width="11.5" height="15"/>
+                                <rect key="frame" x="100" y="35" width="11.5" height="15"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.4979824424" green="0.49807190899999998" blue="0.4979767799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tcq-qR-gwB">
-                                <rect key="frame" x="90" y="55" width="11.5" height="14.5"/>
+                                <rect key="frame" x="100" y="55" width="11.5" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.4979824424" green="0.49807190899999998" blue="0.4979767799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -52,7 +52,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dMJ-2a-Pod" firstAttribute="leading" secondItem="Bqi-WG-Na9" secondAttribute="leading" id="0Gq-M6-Z8R"/>
+                            <constraint firstItem="dMJ-2a-Pod" firstAttribute="leading" secondItem="Bqi-WG-Na9" secondAttribute="leading" constant="10" id="0Gq-M6-Z8R"/>
                             <constraint firstItem="Tcq-qR-gwB" firstAttribute="top" secondItem="3My-bt-Vjn" secondAttribute="bottom" constant="5" id="3Q1-wj-e0A"/>
                             <constraint firstItem="dMJ-2a-Pod" firstAttribute="width" secondItem="Bqi-WG-Na9" secondAttribute="width" multiplier="1/4" id="8rE-Vj-cqS"/>
                             <constraint firstAttribute="trailing" secondItem="PWP-p3-SIf" secondAttribute="trailing" constant="10" id="BQw-76-1Jz"/>
