--- a/WCHProjects/Moduls/Order/view/ORentCarTableViewCell.xib
+++ b/WCHProjects/Moduls/Order/view/ORentCarTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,17 +12,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ORentCarTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="108"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="144.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="107.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kt7-8s-6Vz">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="134.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="98"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fan-Et-8SM">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="135"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="98"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <gestureRecognizers/>
                             </view>
@@ -38,7 +38,7 @@
                                 <color key="textColor" red="0.0" green="0.58637672662734985" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Az-Fp-4lz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Az-Fp-4lz">
                                 <rect key="frame" x="15" y="71" width="290" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
@@ -50,17 +50,6 @@
                                 <color key="textColor" red="0.82914930580000001" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q2f-u9-MhR">
-                                <rect key="frame" x="15" y="94.5" width="290" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="4Jz-zd-IXy"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <state key="normal" title="取消订单"/>
-                                <connections>
-                                    <action selector="typeBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="9az-oD-OD0"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取车时间:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXe-ss-yFW">
                                 <rect key="frame" x="15" y="32" width="53" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -84,13 +73,11 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="Rh4-AG-s0X" firstAttribute="centerY" secondItem="ZDH-4T-6TI" secondAttribute="centerY" id="0Vz-T5-OqH"/>
-                            <constraint firstAttribute="bottom" secondItem="Q2f-u9-MhR" secondAttribute="bottom" constant="10" id="2OB-5P-Bye"/>
-                            <constraint firstItem="Q2f-u9-MhR" firstAttribute="leading" secondItem="kt7-8s-6Vz" secondAttribute="leading" constant="15" id="5X1-pB-ZXj"/>
                             <constraint firstItem="7Az-Fp-4lz" firstAttribute="leading" secondItem="kt7-8s-6Vz" secondAttribute="leading" constant="15" id="9tt-8J-grJ"/>
                             <constraint firstAttribute="trailing" secondItem="Fan-Et-8SM" secondAttribute="trailing" id="Eyc-iE-BBQ"/>
                             <constraint firstItem="Nd2-gW-nCa" firstAttribute="centerY" secondItem="dAe-E2-Fxg" secondAttribute="centerY" id="Gom-sN-mRj"/>
-                            <constraint firstAttribute="trailing" secondItem="Q2f-u9-MhR" secondAttribute="trailing" constant="15" id="Iz5-qb-KBD"/>
                             <constraint firstItem="Fan-Et-8SM" firstAttribute="top" secondItem="kt7-8s-6Vz" secondAttribute="top" id="KcK-vZ-Afb"/>
+                            <constraint firstAttribute="bottom" secondItem="7Az-Fp-4lz" secondAttribute="bottom" constant="10" id="Knd-kb-bHB"/>
                             <constraint firstItem="Nd2-gW-nCa" firstAttribute="leading" secondItem="dAe-E2-Fxg" secondAttribute="trailing" constant="5" id="MKJ-Uu-KvK"/>
                             <constraint firstItem="Fan-Et-8SM" firstAttribute="top" secondItem="kt7-8s-6Vz" secondAttribute="top" id="MZL-e5-vtd"/>
                             <constraint firstAttribute="bottom" secondItem="Fan-Et-8SM" secondAttribute="bottom" id="Oln-LB-n6g"/>
@@ -126,9 +113,6 @@
                 <outlet property="nameLab" destination="ZDH-4T-6TI" id="BCM-H7-2oY"/>
                 <outlet property="pressView" destination="Fan-Et-8SM" id="QUi-OT-Q3e"/>
                 <outlet property="startLab" destination="lii-9n-fJb" id="ZyP-yQ-kPO"/>
-                <outlet property="typeBtn" destination="Q2f-u9-MhR" id="pbZ-Xs-q2j"/>
-                <outlet property="typeBtnBottom" destination="2OB-5P-Bye" id="Pin-uC-KMb"/>
-                <outlet property="typeBtnHeight" destination="4Jz-zd-IXy" id="vbb-Yo-wmY"/>
                 <outlet property="typeLab" destination="Rh4-AG-s0X" id="tgi-vH-VG6"/>
             </connections>
             <point key="canvasLocation" x="32" y="70.5"/>
